conflate tool from plan belt

--- a/environment.yml
+++ b/environment.yml
@@ -2,15 +2,7 @@ name: speed_limit_setting
 channels:
   - conda-forge
 dependencies:
-  - python=3.9*
   - pyproj<3
-  - geopandas<0.9
-  - psycopg2
-  - geoalchemy2
-  - matplotlib
-  - openpyxl
-  - sqlalchemy
-  - sqlalchemy-utils
   - shapely
   - black
   - flake8
@@ -18,6 +10,6 @@ dependencies:
   - numpy<1.22
   - pip
   - python-dotenv
-  - seaborn
   - pip:
+      - git+https://github.com/dvrpc/plan-belt
       - --editable .
